fix overflow css

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ html {
 }
 
 section {
-  overflow-x: hidden;
+  overflow-x: clip;
   padding-top: 8.75em;
 }
 @media (max-width: 768px) {
